tests/baselines/reference/typeFromPropertyAssignment6(strict=true).errors.txt
a.js(5,7): error TS2565: Property 'i' is used before being assigned.
b.js(1,5): error TS7005: Variable 'msgs' implicitly has an 'any[]' type.


==== def.js (0 errors) ====
    class Outer {}
    
==== a.js (1 errors) ====
    Outer.Inner = class I {
        messages() { return [] }
    }
    /** @type {!Outer.Inner} */
    Outer.i
          ~
!!! error TS2565: Property 'i' is used before being assigned.
    
==== b.js (1 errors) ====
    var msgs = Outer.i.messages()
        ~~~~
!!! error TS7005: Variable 'msgs' implicitly has an 'any[]' type.
    
    /** @param {Outer.Inner} inner */
    function x(inner) {
    }
    